plugins {
	id 'application'
	id 'java'
	id 'jacoco'
	id 'eclipse'
}

group = 'sco3'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_25 
    targetCompatibility = JavaVersion.VERSION_25

	toolchain {
		languageVersion = JavaLanguageVersion.of(25)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testImplementation platform('org.junit:junit-bom:5.10.0')
	testImplementation 'org.junit.jupiter:junit-jupiter'
}

test {
    useJUnitPlatform {
        excludeTags 'integration'
    }
    finalizedBy jacocoTestReport
}

jacocoTestReport {
    dependsOn test

    reports {
        html.required = true
        xml.required = false
        csv.required = false
    }
}

application {
   mainClass ='sco3.Main'
}

tasks.withType (JavaExec) {
   jvmArgs = ['--enable-native-access=ALL-UNNAMED']
}


task compileNative(type: Exec) {
    def javaHome = System.getProperty('java.home')

    commandLine 'gcc', '-O3','-shared', '-fPIC', '-o', 'native-method.so',
        'src/main/c/native_method.c',
        '-I', "$javaHome/include",
        '-I', "$javaHome/include/linux"
}

compileJava.dependsOn compileNative